# AjoChain

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
contracts/ajo-collateral/: Cargo.toml
contracts/ajo-collateral/src/: errors.rs  events.rs  lib.rs  test.rs  vault.rs
contracts/ajo-factory/: Cargo.toml
contracts/ajo-factory/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs
contracts/ajo-governance/: Cargo.toml
contracts/ajo-governance/src/: errors.rs  events.rs  lib.rs  proposals.rs  test.rs  timelock.rs
contracts/ajo-pool/: Cargo.toml
contracts/ajo-pool/src/: cycle.rs  errors.rs  events.rs  lib.rs  members.rs  payout.rs  storage.rs  test.rs
contracts/ajo-reputation/: Cargo.toml
contracts/ajo-reputation/src/: errors.rs  events.rs  lib.rs  scoring.rs  test.rs
contracts/ajo-types/: Cargo.toml
contracts/ajo-types/src/: constants.rs  lib.rs  ttl.rs  version.rs
docs/: architecture.md  deployment.md  events.md  security.md
frontend/: package-lock.json  package.json
frontend/src/app/: Scene.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
scripts/: build.sh  deploy.sh  generate-bindings.sh  test.sh
