[workspace]
resolver = "2"
members = [
    "contracts/ajo-types",
    "contracts/ajo-factory",
    "contracts/ajo-pool",
    "contracts/ajo-collateral",
    "contracts/ajo-reputation",
    "contracts/ajo-governance",
]

[workspace.dependencies]
soroban-sdk = "22.0.0"
ajo-types = { path = "contracts/ajo-types" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
