[package]
name = "ajo-collateral"
version = "0.1.0"
edition = "2021"
description = "AjoChain collateral vault — default protection via locked deposits and slashing"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ajo-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
