[package]
name = "ajo-reputation"
version = "0.1.0"
edition = "2021"
description = "AjoChain reputation oracle — on-chain trust scoring for pool participants"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
ajo-types = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
