[package]
name = "ajo-types"
version = "0.1.0"
edition = "2021"
description = "AjoChain shared types — cross-contract data structures and constants"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
